текущая дата сеанса не работает на мобильном клиенте

--- a/wmsmobile/src/CommonForms/ФормаПечатиЭтикеткиГрупповойТары/Form.form
+++ b/wmsmobile/src/CommonForms/ФормаПечатиЭтикеткиГрупповойТары/Form.form
@@ -1949,8 +1949,7 @@
     </title>
     <id>26</id>
     <valueType>
-      <types>String</types>
-      <stringQualifiers/>
+      <types>Boolean</types>
     </valueType>
     <view>
       <common>true</common>
